# nishika-22

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py  setup.cfg
config/: default.yaml
config/augmentation/: default.yaml  exp009.yaml
config/competition/: default.yaml
config/dataset/: contrastive_loss.yaml
config/experiment/: exp012.yaml  exp016.yaml  exp032.yaml
config/fold/: default.yaml
config/hook/: default.yaml
config/lightning_module/: contrastive_loss.yaml
config/model/: contrastive_loss.yaml
config/optimizer/: default.yaml
config/trainer/: contrastive_loss.yaml
docker/: Dockerfile  requirements-kaggle-kernel.txt  requirements.txt
src/benchmark/: app.py  benchmark.py
src/custom/: __init__.py  hook.py  loss.py
src/custom/datasets/: dataset.py
src/custom/evaluations/: score.py
src/custom/transforms/: transform.py
src/kvt/: __init__.py  builder.py  initialization.py  registry.py
src/kvt/apis/: evaluate_oof.py  inference.py  train.py
src/kvt/augmentation/: __init__.py  audio.py  augmix.py  autoaugment.py  block_fade.py  crop.py  grid_mask.py  histogram.py  line.py  morphological.py  needless.py  random_erasing.py  reduce_dim.py  resize.py  rotate.py  spec_augmentation.py  sprinkle.py
src/kvt/callbacks/: __init__.py  autoclip.py  log_gradient.py
src/kvt/collate_fns/: __init__.py  multi_crop.py  text.py
src/kvt/datasets/: __init__.py  base.py  (+2 more)
src/misc/: download_resnest50.py  fold.py  make_ensemble_submission.py  make_submission.py  make_submission_nmslib.py  preprocess.py  preprocess_orc.py
(+94 files in other folders)
