[metadata]
project_name = nishika-22
author = Yuki NAKATSUKA
contact = nk.tsssa@gmail.com
license_file = LICENSE
description_file = README.md
project_template = https://github.com/ashleve/lightning-hydra-template

[flake8]
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
